--- a/app/src/main/res/xml/main_settings_preferences.xml
+++ b/app/src/main/res/xml/main_settings_preferences.xml
@@ -55,7 +55,7 @@
             android:key="preference_force_title"
             android:title="@string/main_force_title" />
 
-        <kiwi.root.an2linuxclient.data.NumberPickerPreference
+        <kiwi.root.an2linuxclient.preferences.MaxTitleSizePreference
             android:defaultValue="20"
             android:dependency="preference_include_notification_title"
             android:dialogMessage="@string/main_max_title_dialog_message"
@@ -67,7 +67,7 @@
             android:key="preference_include_notification_message"
             android:title="@string/main_include_message" />
 
-        <kiwi.root.an2linuxclient.data.NumberPickerPreference
+        <kiwi.root.an2linuxclient.preferences.MaxMessageSizePreference
             android:defaultValue="120"
             android:dependency="preference_include_notification_message"
             android:dialogMessage="@string/main_max_message_dialog_message"
