--- a/app/src/main/res/xml/notification_preferences.xml
+++ b/app/src/main/res/xml/notification_preferences.xml
@@ -2,60 +2,60 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
     <PreferenceCategory
-        android:key="notification_settings_global_category"
+        android:key="@string/notification_settings_global_category"
         android:title="@string/notif_settings_global_category_title">
 
         <CheckBoxPreference
             android:defaultValue="true"
-            android:key="preference_include_notification_title"
+            android:key="@string/preference_include_notification_title"
             android:title="@string/main_include_title" />
 
         <CheckBoxPreference
             android:defaultValue="false"
-            android:dependency="preference_include_notification_title"
-            android:key="preference_force_title"
+            android:dependency="@string/preference_include_notification_title"
+            android:key="@string/preference_force_title"
             android:title="@string/main_force_title" />
 
         <kiwi.root.an2linuxclient.preferences.MaxTitleSizePreference
             android:defaultValue="20"
-            android:dependency="preference_include_notification_title"
+            android:dependency="@string/preference_include_notification_title"
             android:dialogMessage="@string/main_max_title_dialog_message"
-            android:key="preference_title_max_size"
+            android:key="@string/preference_title_max_size"
             android:title="@string/main_max_title" />
 
         <CheckBoxPreference
             android:defaultValue="true"
-            android:key="preference_include_notification_message"
+            android:key="@string/preference_include_notification_message"
             android:title="@string/main_include_message" />
 
         <kiwi.root.an2linuxclient.preferences.MaxMessageSizePreference
             android:defaultValue="120"
-            android:dependency="preference_include_notification_message"
+            android:dependency="@string/preference_include_notification_message"
             android:dialogMessage="@string/main_max_message_dialog_message"
-            android:key="preference_message_max_size"
+            android:key="@string/preference_message_max_size"
             android:title="@string/main_max_message" />
 
         <CheckBoxPreference
             android:defaultValue="true"
-            android:key="preference_include_notification_icon"
+            android:key="@string/preference_include_notification_icon"
             android:title="@string/main_include_icon" />
 
         <kiwi.root.an2linuxclient.preferences.IconSizePreference
             android:defaultValue="64"
-            android:dependency="preference_include_notification_icon"
+            android:dependency="@string/preference_include_notification_icon"
             android:dialogMessage="@string/main_icon_size_dialog_message"
-            android:key="preference_icon_size"
+            android:key="@string/preference_icon_size"
             android:title="@string/main_icon_size" />
 
         <CheckBoxPreference
             android:defaultValue="false"
-            android:key="preference_block_ongoing"
+            android:key="@string/preference_block_ongoing"
             android:summary="@string/main_block_ongoing_summary"
             android:title="@string/main_block_ongoing" />
 
         <CheckBoxPreference
             android:defaultValue="false"
-            android:key="preference_block_foreground"
+            android:key="@string/preference_block_foreground"
             android:title="@string/main_block_foreground" />
 
     </PreferenceCategory>
