--- a/app/src/main/res/values/shared_prefs_keys.xml
+++ b/app/src/main/res/values/shared_prefs_keys.xml
@@ -21,4 +21,5 @@
     <string name="preference_block_group">preference_block_group</string>
     <string name="preference_block_local">preference_block_local</string>
     <string name="preference_use_custom_settings">preference_use_custom_settings</string>
+    <string name="preference_min_notification_priority">preference_min_notification_priority</string>
 </resources>
