--- a/app/src/main/res/xml/main_preferences.xml
+++ b/app/src/main/res/xml/main_preferences.xml
@@ -9,6 +9,12 @@
             android:title="@string/main_enable_an2linux"
             android:widgetLayout="@layout/appcompat_switch_layout" />
 
+        <CheckBoxPreference
+                    android:defaultValue="false"
+                    android:key="@string/preference_enable_service"
+                    android:title="@string/main_enable_service"
+                    android:widgetLayout="@layout/appcompat_switch_layout" />
+
         <Preference
             android:summary="@string/main_enabled_apps_summary"
             android:title="@string/activity_label_enabled_applications">
