Improve user interaction with settings
This patch stops the foreground service if the notification service is
disabled and disables the option - the opposite is handled as well.

--- a/app/src/main/res/xml/main_preferences.xml
+++ b/app/src/main/res/xml/main_preferences.xml
@@ -11,6 +11,7 @@
 
         <CheckBoxPreference
                     android:defaultValue="false"
+                    android:dependency="@string/preference_enable_an2linux"
                     android:key="@string/preference_enable_service"
                     android:title="@string/main_enable_service"
                     android:widgetLayout="@layout/appcompat_switch_layout" />
