--- a/app/src/main/res/layout/view_server_item.xml
+++ b/app/src/main/res/layout/view_server_item.xml
@@ -46,7 +46,7 @@
 
     </LinearLayout>
 
-    <android.support.v7.widget.SwitchCompat
+    <androidx.appcompat.widget.SwitchCompat
         android:id="@+id/prefServerEnabled"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
