--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="gray_extra_light">#E0E0E0</color>
     <color name="gray_light">#BDBDBD</color>
     <color name="gray">#757575</color>
+    <color name="gray_little_dark">#515151</color>
     <color name="gray_dark">#323232</color>
     <color name="black">#212121</color>
 
