--- a/app/src/main/res/layout/activity_custom_notification_settings.xml
+++ b/app/src/main/res/layout/activity_custom_notification_settings.xml
@@ -24,7 +24,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.086" />
+            app:layout_constraintVertical_bias="0.086"
+            tools:ignore="ContentDescription" />
 
         <TextView
             android:id="@+id/warningTitleText"
