--- a/app/src/main/res/layout/view_server_item.xml
+++ b/app/src/main/res/layout/view_server_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal">
@@ -11,7 +12,8 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="12dp"
         android:layout_marginTop="8dp"
-        android:src="@drawable/ic_bluetooth_white_24dp" />
+        android:src="@drawable/ic_bluetooth_white_24dp"
+        tools:ignore="ContentDescription" />
 
     <LinearLayout
         android:layout_width="0dp"
