Set default port in dialog

--- a/app/src/main/res/layout/view_dialog_tcp_base.xml
+++ b/app/src/main/res/layout/view_dialog_tcp_base.xml
@@ -18,6 +18,7 @@
         android:id="@+id/portNumber"
         style="@style/DialogEditText"
         android:hint="@string/dialog_port_hint"
-        android:inputType="number" />
+        android:inputType="number"
+        android:text="46352" />
 
 </merge>
