--- a/app/src/main/res/values/shared_prefs_keys.xml
+++ b/app/src/main/res/values/shared_prefs_keys.xml
@@ -7,6 +7,7 @@
     <string name="privatekey">privatekey</string>
     <string name="certificate">certificate</string>
     <string name="version_code_seen">version_code_seen</string>
+    <string name="main_setup_category_key">main_setup_category_key</string>
     <string name="preference_enable_an2linux">preference_enable_an2linux</string>
     <string name="preference_enable_service">preference_enable_service</string>
     <string name="preference_enable_disable_all_applications">preference_enable_disable_all_applications</string>
