--- a/app/src/main/res/values/changelog.xml
+++ b/app/src/main/res/values/changelog.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="changelog">
+        &lt;b&gt;0.10.0 (Oct 9, 2019)&lt;/b&gt;&lt;br&gt;
+        - Add support for commas in WiFi SSID&lt;br&gt;&lt;br&gt;
         &lt;b&gt;0.9.2 (Sep 4, 2019)&lt;/b&gt;&lt;br&gt;
         - Add information about battery optimizations (Doze) introduced in Android 6.0.&lt;br&gt;&lt;br&gt;
         &lt;b&gt;0.9.0 (Sep 1, 2019)&lt;/b&gt;&lt;br&gt;
