--- a/app/src/main/res/values/changelog.xml
+++ b/app/src/main/res/values/changelog.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="changelog">
+        &lt;b&gt;0.11.0 (Oct 25, 2019)&lt;/b&gt;&lt;br&gt;
+        - Norwegian (bokmål) translation by bilde2910, thank you!&lt;br&gt;&lt;br&gt;
         &lt;b&gt;0.10.0 (Oct 9, 2019)&lt;/b&gt;&lt;br&gt;
         - Add support for commas in WiFi SSID&lt;br&gt;&lt;br&gt;
         &lt;b&gt;0.9.2 (Sep 4, 2019)&lt;/b&gt;&lt;br&gt;
