--- a/app/src/main/res/values/changelog.xml
+++ b/app/src/main/res/values/changelog.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="changelog">
+        &lt;b&gt;0.13.1 (Mar 21, 2021)&lt;/b&gt;&lt;br&gt;
+        - Bunch of translations, thank you all!&lt;br&gt;&lt;br&gt;
+        - Russian added/updated by: Vlad &amp; Andrey F&lt;br&gt;&lt;br&gt;
+        - German updated by: Maximilian H, Translator &amp; Simon Kreuzer&lt;br&gt;&lt;br&gt;
+        - French updated by: Aearil&lt;br&gt;&lt;br&gt;
+        - Polish updated by: Atrate &amp; Jakub Fabijan&lt;br&gt;&lt;br&gt;
+        - Spanish updated by: badlop &amp; Vi-dot1&lt;br&gt;&lt;br&gt;
+        - Hungarian added by: SoftwareByRedline&lt;br&gt;&lt;br&gt;
+        - Turkish added by: Burak Hüseyin Ekseli&lt;br&gt;&lt;br&gt;
         &lt;b&gt;0.13.0 (Dec 1, 2020)&lt;/b&gt;&lt;br&gt;
         - Polish translation added by WaldiS.&lt;br&gt;&lt;br&gt;
         - French translation added by J. Lavoie.&lt;br&gt;&lt;br&gt;
